crates/mensura-cli/tests/corpus/reject/non_snake_store.mensura
// Rejected at resolve: a store name must be snake_case
// (docs/language/05-naming-and-casing.md).
unit U {
  id: string
}

store TempReadings {
  unit { U }
}
